whitespace and align fixed

--- a/css/style.css
+++ b/css/style.css
@@ -110,29 +110,29 @@ section {
 
 .middleContainer {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr;
   grid-gap: 1rem;
   margin: 0 auto;
+  position: relative;
   width: 95vw;
 }
 
 .greenDiv {
-  grid-column: 1 / 3;
+  grid-column: 3 / 4;
   grid-row: 2;
 }
 
 .greenDiv img {
-  position: relative;left: 3rem;
-  width: 75vw;
+  width: 88vw;
 }
 
 .middleText {
-  grid-column: 1 / 3;
+  grid-column: 3 / 4;
   grid-row: 1;
   padding-top: 5rem;
   padding-bottom: 5rem;
-  width: 95vw;
+  width: 90vw;
 }
 
 /* CACHE */
